--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <style>
     .body{
-    font-family:'Times New Roman', Times, serif;
+   font-family:comic Sans MS;
     font-size: 15px;
     }
 </style>
